--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost/taskmanager_api
+spring.datasource.username=root
+spring.datasource.password=em8S8wZY0OZyS52801Sh
 
+
+server.error.include-stacktrace=never
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
